Updated Locations into the menu Filter (html+js)
Updated Locations into the menu Filter (html+js):
*updated Locations into the menu Filter(html)
*dictionary update(js)

--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@
                     </div>
                 </div>
                 <div class="third_section">
-                    <!-- Location button -->
+                    <!-- Locations button -->
                     <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="locationButton" data-key="location" data-dropdown-toggle="locationSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
-                            Location
+                        <button id="locationsButton" data-key="locations" data-dropdown-toggle="locationsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                            Locations
                         </button>    
                         <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
                             <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
@@ -472,8 +472,8 @@
                         </div>
                     </div>
                    
-                    <!-- Location menu -->
-                    <div id="locationSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-60 dark:bg-gray-700" style="cursor: pointer;">
+                    <!-- Locations menu -->
+                    <div id="locationsSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-60 dark:bg-gray-700" style="cursor: pointer;">
                         <div class="p-3">
                             <label for="input-group-search" class="sr-only">Search</label>
                             <div class="relative">
@@ -482,7 +482,7 @@
                                 </div>
                             </div>
                         </div>
-                        <ul id="location-list" class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownSearchButton">
+                        <ul id="locations-list" class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownSearchButton">
                         </ul>
                     </div>
                 </div>
