Updated the filter menu (js+css)
Updated the filter menu (js+css):
*Changing the background color of the boxes in the filter menu according to the requirements.

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <div class="first_section">
                     <!-- Activites button -->
                       <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="activitesButton" data-key="activites" data-dropdown-toggle="activitesSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                        <button id="activitesButton" data-key="activites" data-dropdown-toggle="activitesSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Activites
                         </button>
                         <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
@@ -431,7 +431,7 @@
                 <div class="second_section">
                     <!-- Guests button -->
                     <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="guestsButton" data-key="guests" data-dropdown-toggle="guestsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                        <button id="guestsButton" data-key="guests" data-dropdown-toggle="guestsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Guests
                             <i class="fa-solid fa-droplet" style="font-weight: 900; margin-left: 10px; "></i>
                         </button>   
@@ -462,7 +462,7 @@
                 <div class="third_section">
                     <!-- Locations button -->
                     <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="locationsButton" data-key="locations" data-dropdown-toggle="locationsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                        <button id="locationsButton" data-key="locations" data-dropdown-toggle="locationsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Locations
                         </button>    
                         <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
@@ -489,7 +489,7 @@
                 <div class="fourth_section">
                     <!-- Session Availability button -->
                      <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="sessionAvailabilityButton" data-key="sessionAvailability" data-dropdown-toggle="sessionAvailabilitySearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                        <button id="sessionAvailabilityButton" data-key="sessionAvailability" data-dropdown-toggle="sessionAvailabilitySearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Session availability
                         </button>   
                         <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
@@ -515,7 +515,7 @@
                 <div class="fifth_section">
                     <!-- Other Events button -->
                      <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="otherEventsButton" data-key="otherEvents" data-dropdown-toggle="otherEventsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+                        <button id="otherEventsButton" data-key="otherEvents" data-dropdown-toggle="otherEventsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Other events
                         </button>   
                        <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
