--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <ul id="gusests-list" class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownSearchButton">
+                            <ul id="guests-list" class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownSearchButton">
                             </ul>
                         </div>
                     </div>
@@ -623,6 +623,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@9.0.3"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
     <script defer src="main.js"></script>
+    <script src="events.js"></script>
 
 </body>
 </html>
