--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@9.0.3"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
     <script defer src="main.js"></script>
-    <script src="events.js"></script>
+    <script defer src="events.js"></script>
 
 </body>
 </html>
