--- a/index.html
+++ b/index.html
@@ -401,17 +401,18 @@
                 <div class="first_section">
                     <!-- Activites button -->
                       <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="activitesButton" data-key="activites" data-dropdown-toggle="activitesSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
+                        <span id="activitesButton" data-key="activites" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Activites
+                        </span>
+                        <button class="first_section_right" style="display: flex; align-items: center; gap: 10px;" data-dropdown-toggle="activitesSearch" data-dropdown-placement="bottom">                             
+                                <span class="button_inside">
+                                    <i class="fa-solid fa-plus cursor-pointer" style="font-weight: 900; color:rgba(35, 166, 248, 1);"></i>
+                                </span>
+                                <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+                                </svg>
+                            
                         </button>
-                        <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
-                            <span class="button_inside">
-                                <i class="fa-solid fa-plus" style="font-weight: 900; color:rgba(35, 166, 248, 1);"></i>
-                            </span>
-                            <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
-                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
-                            </svg>
-                        </div>
                         
                         <!-- Activites menu -->
                         <div id="activitesSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-60 dark:bg-gray-700" style="cursor: pointer;">
