--- a/index.html
+++ b/index.html
@@ -432,18 +432,18 @@
                 <div class="second_section">
                     <!-- Guests button -->
                     <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="guestsButton" data-key="guests" data-dropdown-toggle="guestsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
+                        <span id="guestsButton" data-key="guests" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Guests
                             <i class="fa-solid fa-droplet" style="font-weight: 900; margin-left: 10px; "></i>
-                        </button>   
-                        <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
+                        </span>
+                        <button class="first_section_right" style="display: flex; align-items: center; gap: 10px;" data-dropdown-toggle="guestsSearch" data-dropdown-placement="bottom" >
                             <span class="button_inside">
                                 <i class="fa-solid fa-plus" style="font-weight: 900; color:rgba(35, 166, 248, 1);"></i>
                             </span>
                             <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4" />
                             </svg>
-                        </div>
+                        </button>
 
                         <!-- Guests menu -->
                         <div id="guestsSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-60 dark:bg-gray-700" style="cursor: pointer;">
@@ -463,14 +463,14 @@
                 <div class="third_section">
                     <!-- Locations button -->
                     <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="locationsButton" data-key="locations" data-dropdown-toggle="locationsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
+                        <span id="locationsButton" data-key="locations"  style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Locations
-                        </button>    
-                        <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
+                        </span>    
+                        <button class="first_section_right" style="display: flex; align-items: center; gap: 10px;" data-dropdown-toggle="locationsSearch" data-dropdown-placement="bottom">
                             <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                             </svg>
-                        </div>
+                        </button>
                     </div>
                    
                     <!-- Locations menu -->
@@ -490,14 +490,14 @@
                 <div class="fourth_section">
                     <!-- Session Availability button -->
                      <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="sessionAvailabilityButton" data-key="sessionAvailability" data-dropdown-toggle="sessionAvailabilitySearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
+                        <span id="sessionAvailabilityButton" data-key="sessionAvailability" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Session availability
-                        </button>   
-                        <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
+                        </span>   
+                        <button class="first_section_right" style="display: flex; align-items: center; gap: 10px;" data-dropdown-toggle="sessionAvailabilitySearch" data-dropdown-placement="bottom" >
                             <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                             </svg>
-                        </div>                  
+                        </button>                  
                     </div>
                     <!-- Session Availability menu -->
                     <div id="sessionAvailabilitySearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-60 dark:bg-gray-700" style="cursor: pointer;">
@@ -516,14 +516,14 @@
                 <div class="fifth_section">
                     <!-- Other Events button -->
                      <div style="display: flex; align-items: center; gap: 10px;">
-                        <button id="otherEventsButton" data-key="otherEvents" data-dropdown-toggle="otherEventsSearch" data-dropdown-placement="bottom" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
+                        <span id="otherEventsButton" data-key="otherEvents" style="cursor: pointer;" class="focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
                             Other events
-                        </button>   
-                       <div class="first_section_right" style="display: flex; align-items: center; gap: 10px;">
+                        </span>   
+                       <button class="first_section_right" style="display: flex; align-items: center; gap: 10px;" data-dropdown-toggle="otherEventsSearch" data-dropdown-placement="bottom" >
                             <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
                             </svg>
-                        </div>
+                       </button>
                     </div>
                     <!-- Other Events menu -->
                     <div id="otherEventsSearch" class="z-10 hidden bg-white rounded-lg shadow-sm w-60 dark:bg-gray-700" style="cursor: pointer;">
