Uploaded menu Filter by (html)
Uploaded menu Filter by (html)
*Nested menus for the 'Filter by' menu tabs have been improved

--- a/index.html
+++ b/index.html
@@ -426,6 +426,21 @@
                                     </div>
                                 </div>
                                 <ul id="activites-list" class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownSearchButton">
+                                    <li class="a1-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        All
+                                    </li>
+                                    <li class="a2-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        Classes
+                                    </li>
+                                     <li class="a3-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        Workshops
+                                    </li>
+                                    <li class="a4-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        Meeting
+                                    </li>
+                                    <li class="a5-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        Sports
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -457,6 +472,21 @@
                                     </div>
                                 </div>
                                 <ul id="guests-list" class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownSearchButton">
+                                    <li class="g1-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        All
+                                    </li>
+                                    <li class="g2-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        Adults
+                                    </li>
+                                     <li class="g3-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        Kids
+                                    </li>
+                                    <li class="g4-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        VIP
+                                    </li>
+                                    <li class="g5-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                        New
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -485,6 +515,21 @@
                                 </div>
                             </div>
                             <ul id="locations-list" class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownSearchButton">
+                                <li class="l1-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    All
+                                </li>
+                                <li class="l2-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Room 1
+                                </li>
+                                <li class="l3-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Room 2
+                                </li>
+                                <li class="l4-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Hall
+                                </li>
+                                <li class="l5-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Outdoor
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -511,6 +556,21 @@
                                 </div>
                             </div>
                             <ul id="sessionAvailability-list" class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownSearchButton">
+                                <li class="as1-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    All
+                                </li>
+                                <li class="as2-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Morning
+                                </li>
+                                <li class="as3-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Midday
+                                </li>
+                                <li class="as4-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Afternoon
+                                </li>
+                                <li class="as5-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Evening
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -537,6 +597,21 @@
                                 </div>
                             </div>
                             <ul id="otherEvents-list" class="h-48 px-3 pb-3 overflow-y-auto text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownSearchButton">
+                                <li class="oe1-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    All
+                                </li>
+                                <li class="oe1-list lang py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Holiday
+                                </li>
+                                <li class="oe3-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Maintenance
+                                </li>
+                                <li class="oe4-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Private
+                                </li>
+                                <li class="oe5-list py-2 px-3 w-full text-left bg-gray-100 hover:bg-gray-200 rounded cursor-pointer">
+                                    Closed
+                                </li>
                             </ul>
                         </div>
                     </div>
